# python-spahau

./: Makefile  README.md
c/: Makefile  README.md  spahau.c  spahau.h  sphhost.c  sphhost.h  sphquery.c  sphquery.h  sphresponse.c  sphresponse.h
python/: README.md  run_spahau.sh  setup.cfg  setup.py  tox.ini
python/src/spahau/: __init__.py  __main__.py  defs.py  query.py  response.py
t/: 01-selftest.t  02-query.t  03-hostname.t  04-description.t
