[metadata]
name = spahau
version = attr: spahau.VERSION
description = A Spamhaus RBL client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ppentchev/python-spahau
author = Peter Pentchev
author_email = roam@ringlet.net
keywords = blacklist rbl spamhaus
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: DFSG approved
    License :: Freely Distributable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = True
packages =
    spahau
setup_requires =
install_requires =
    dataclasses; python_version < '3.7'
python_requires = >= 3.6

[options.package_data]
spahau =
  py.typed
